kubernetes/service-node-port.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: apresentacao-frontend-node
  name: service-apresentacao-frontend-node
spec:
  selector:
    app: apresentacao-frontend-node
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
