kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: apresentacao-frontend-nginx
  name: ingress-apresentacao-frontend-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    #- host: apresentacao-frontend.node #verificar host com cloud provider
    -  http:
         paths:
           - path: /
             backend:
                 serviceName: service-apresentacao-frontend-nginx
                 servicePort: 8081
